# n-aible_edtech_sims

./: .coderabbit.yaml  .gitignore  .gitmodules  CLAUDE.md  CLEANUP_SUMMARY.md  CODERABBIT_FIXES.md  CONTEXTPROXY.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  MIGRATION_NOTES.md  PERSONA_ISOLATION_FIX.md  PERSONA_PROMPTING_REFERENCE.md  QUERY_TIMEOUT_EXPLANATION.md  QUICK_DEBUG.md  README.md  SANDBOX_SHUTDOWN_RESEARCH.md  SCENE_SYSTEM_REFERENCE.md  SECURITY_ASSESSMENT.md  TODO.md  add_unique_id_column.sql  architecture.md  backend_railway.toml  complete_streaming_function.py  databaseOptimization.md  daytona-architecture.md  env_template.txt  fix_alembic_state.sql  locust_prod_smoke.html  pgvector_usage_analysis.md  pyproject.toml  test_account.txt  test_langchain_integration.py  test_persona_isolation.py  test_rag_grading.py  test_simulation_endpoints.py
backend/: PDF_UPLOAD_FLOW.md  alembic.ini  backend_railway.toml  check_migrations.py  check_persona_system_prompts.py  clear_database.py  create_db.py  deploy_railway.py  immediate_cleanup.py  langchain_config.py  main.py  pyproject.toml  railway.toml  requirements.txt  run_debug.sh  start.sh  test_main.py
backend/agents/: grading_agent.py  persona_agent.py  summarization_agent.py
backend/api/: chat_orchestrator.py  image_generation.py  linear_chat_stream.py  messages.py  oauth.py  parse_pdf.py  pdf_progress.py  publishing.py  simulation.py  student_simulation_instances.py  test_parse_pdf_unit.py  test_simulation_comprehensive.py
backend/api/professor/: cohorts.py  grading.py  grading_materials.py  invitations.py  messages.py
backend/api/student/: cohorts.py  simulation_instances.py
backend/app/: dependencies.py  lifespan.py  main.py  middleware.py
backend/app/api/: __init__.py  auth.py  notifications.py  pdf_processing.py  professor.py  publishing.py  simulation.py  student.py
backend/app/router/: auth.py
backend/app/routers/: __init__.py  invites.py  pdf_processing.py  simulation.py
backend/common/: config.py  exceptions.py  logging.py
backend/common/db/: __init__.py  base.py  connection.py  core.py  mixins.py  models.py  schemas.py
backend/common/security/: passwords.py  reset_tokens.py  tokens.py
backend/common/services/: ai_gateway.py  cache_service.py  email_service.py  (+6 more)
backend/database/: connection.py  models.py  schemas.py  test_schemas.py
backend/db_admin/: README.md  app.py
backend/middleware/: __init__.py  role_auth.py
backend/scripts/: LOAD_TESTING_README.md  QUICK_TEST_GUIDE.md  SECURITY_AUDIT.md  check_pdf_upload.py  cleanup_test_users.py  create_test_users.py  fix_scene_progress_schema.py  load_test.py  load_test_simulation_chat.py  monitor_pool.py  setup_test_simulations.py
backend/services/: ai_cache_service.py  async_chat_optimizer.py  db_cache_service.py  embedding_service.py  grading_embedding_service.py  grading_vector_store.py  immediate_cleanup.py  scene_memory.py  scheduled_cleanup.py  session_manager.py  simulation_engine.py  soft_deletion.py  vector_store.py  wasabi_service.py
backend/tests/: LOAD_TESTING_IMPLEMENTATION_PLAN.md  README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py  test_auth.py  test_cohorts.py  test_conversation_cache.py  test_excessive_db_polling.py  test_grading_llm.py  test_integration.py  test_messages.py  test_oauth.py  test_pdf_processing.py  test_professor_endpoints.py  test_professor_regrade_auth.py  test_publishing.py  test_scenarios.py  test_simulation.py  test_student_endpoints.py
backend/utilities/: auth.py  debug_logging.py  id_generator.py  image_storage.py
backend/workers/: __init__.py  simulation_worker.py
backend_v2/: pyproject.toml  railway.toml
backend_v2/app/: lifespan.py  main.py
backend_v2/common/: config.py
backend_v2/tests/: README.md  conftest.py
(+649 files in other folders)
