[project]
name = "n-aible-backend-v2"
version = "0.1.0"
description = "Modular FastAPI backend for the n-aible education platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "n-aible Team" },
]
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "locust>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

