[project]
name = "n-aible-edtech-backend"
version = "0.1.0"
description = "Backend services for the N-Aible EdTech simulation platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.14",
    "uvicorn[standard]==0.35.0",
    "SQLAlchemy>=2.0.0,<3.0",
    "alembic==1.16.2",
    "psycopg2-binary==2.9.10",
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "google-auth==2.35.0",
    "google-auth-oauthlib==1.2.0",
    "google-auth-httplib2==0.2.0",
    "openai>=1.97.1",
    "redis==5.2.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "aiohttp>=3.12.0",
    "aiofiles>=24.1.0",
    "boto3>=1.34.0",
    "python-dotenv==1.1.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.6.1",
    "email-validator>=2.0.0",
    "langchain==0.3.7",
    "langchain-openai==0.2.8",
    "langchain-community==0.3.7",
    "langchain-postgres>=0.0.15",
    "langchain-experimental==0.3.4",
    "llama-index-readers-llama-parse==0.5.1",
    "pgvector>=0.2.5,<0.3.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "daytona-sdk>=0.9.1",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
package = false
python-preference = "system"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "locust>=2.41.6",
]
